configure working dirs